Update Spark URL & Version

--- a/spark/Dockerfile
+++ b/spark/Dockerfile
@@ -4,11 +4,11 @@ RUN apk --update add make automake gcc g++ subversion \
     curl tar bash python3-dev openjdk8 nss libc6-compat && \
     ln -s /lib64/ld-linux-x86-64.so.2 /lib/ld-linux-x86-64.so.2
 
-RUN curl -L http://apache.spinellicreations.com/spark/spark-2.4.5/spark-2.4.5-bin-hadoop2.7.tgz -o spark-2.4.5-bin-hadoop2.7.tgz
+RUN curl -L https://ftp.heanet.ie/mirrors/www.apache.org/dist/spark/spark-3.1.1/spark-3.1.1-bin-hadoop2.7.tgz -o spark-3.1.1-bin-hadoop2.7.tgz
 
-RUN tar -xzf spark-2.4.5-bin-hadoop2.7.tgz && \
-    mv spark-2.4.5-bin-hadoop2.7 /spark && \
-    rm spark-2.4.5-bin-hadoop2.7.tgz && \
+RUN tar -xzf spark-3.1.1-bin-hadoop2.7.tgz && \
+    mv spark-3.1.1-bin-hadoop2.7 /spark && \
+    rm spark-3.1.1-bin-hadoop2.7.tgz && \
     pip3 install --upgrade pip && \
     pip3 install numpy pandas && \
     mkdir /etc/conf.d/hadoop
